# CodeCopilot

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  GETTING_STARTED.md  README.md  docker-compose.yml  plan.md  procedure.md  product.contract.json  pyproject.toml  quicksort.py  render.yaml  routing.config.gemini.json  routing.config.json
docs/: phase-0-product-definition.md  phase-1-core-runtime.md  phase-10-mcp-ecosystem.md  phase-2-model-routing.md  phase-3-tool-system.md  phase-4-sandbox.md  phase-5-repository-intelligence.md  phase-6-approval-workflow.md  phase-7-observability.md  phase-8-evaluation.md  phase-9-hosted-control-plane.md
evals/datasets/: smoke.json
scripts/: create-phased-commits.sh
src/coding_assistant/: __init__.py  __main__.py  app.py  config.py
src/coding_assistant/api/: control_deps.py  deps.py  router.py  schemas.py
src/coding_assistant/approval/: __init__.py  context.py  policy.py
src/coding_assistant/cli/: __init__.py  chat.py  client.py
src/coding_assistant/control_plane/: __init__.py  audit.py  auth.py  budget.py  rate_limit.py
src/coding_assistant/db/: __init__.py  models.py  session.py
src/coding_assistant/evals/: __init__.py  dataset.py  grader.py  runner.py  types.py
src/coding_assistant/mcp/: __init__.py  (+5 more)
tests/: conftest.py  test_approval.py  test_chat_cli.py  test_control_plane.py  test_evals.py  test_gemini_credentials.py  test_graph.py  test_intelligence.py  test_mcp.py  test_observability.py  test_routing.py  test_sandbox.py  test_sanitize.py  test_tool_system.py  test_tools.py
web/: index.html
(+56 files in other folders)
