[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-assistant"
version = "0.1.0"
description = "Production-grade coding assistant — core runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "litellm>=1.55.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "pgvector>=0.3.6",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "prometheus-client>=0.21.0",
    "langfuse>=2.0.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
coding-assistant = "coding_assistant.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_assistant"]

[tool.hatch.build.targets.sdist]
packages = ["src/coding_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
